# swcli

./: .gitignore  README.md  pyproject.toml  requirements.txt
swcli/: __init__.py  exceptions.py  films.py  models.py  people.py  planets.py  render.py  settings.py  species.py  starships.py  swcli.py  utils.py  vehicles.py
tests/: test_swcli.py
