[tool.poetry]
name = "swcli"
version = "0.1.14"
description = "A simple CLI to do queries in StarWars API."
authors = ["Pery Lemke <pery.lemke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.20.0"
fire = "^0.4.0"
autopep8 = "^1.5.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
swcli = 'swcli.swcli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
